--- a/index.html
+++ b/index.html
@@ -319,9 +319,17 @@
 
         </div>
 
+
     <!-- Footer for File Tracking Info -->
     <div id="app-footer">
         <div class="file-info">
+            <!-- Buy Me a Coffee -->
+            <a href="https://www.buymeacoffee.com/nexuswow" target="_blank" class="bmc-btn-inline">
+                <img src="https://cdn.buymeacoffee.com/buttons/v2/default-blue.png" alt="Buy Me A Coffee">
+            </a>
+
+            <!-- Separator -->
+            <span class="footer-separator">|</span>
             <!-- LIVE Indicator -->
             <span id="live-indicator" style="margin-right: 2px; font-size:0.8em; color:#0f0; display:none;">●</span>
 
@@ -350,6 +358,6 @@
     <script src="database.js"></script>
     <script src="forecast_data.js"></script>
     <script src="script.js"></script>
-    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="nexuswow" data-description="Support me on Buy me a coffee!" data-message="" data-color="#5F7FFF" data-position="Left" data-x_margin="18" data-y_margin="18"></script>
+    
 </body>
 </html>
